--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -165,9 +165,9 @@ html:not(.dark) #experience .experience-header .bg-purple-400{
 
   padding: 30px;
 
-  box-shadow:
+  /* box-shadow:
     0 18px 55px rgba(0,0,0,0.18),
-    0 0 0 1px rgba(255,255,255,0.03) inset;
+    0 0 0 1px rgba(255,255,255,0.03) inset; */
 
   transition: transform .22s ease, box-shadow .22s ease, border-color .22s ease, background .22s ease;
 }
